# supersanjavier

./: .gitignore  carga_datos_productos.py  datos_de_ejemplo.py  ejemplo_productos_supermercado.json  gallerydata.py  main.py  main_client.py  main_server.py  menudata.py  pos_settings.cfg  pyproject.toml  settings copy.py  settings.py  sincronization.py  sincronization_servidor.py
apps/cliente/: fast_api.py  pos_settings.cfg  settings.py  styles.py
apps/comun/: models.py  routes.py  views.py
apps/inventario/: models.py  routes.py  views.py
apps/servidor/: fast_api.py  menudata.py  migrate.py  server_settings.cfg  settings.py  styles.py
apps/ventas/: models.py  routes.py  views.py
components/: custom_buttons.py  custom_dialogs.py  custom_input.py  custom_standard_form.py  cutom_button_cupertino.py  field_builder.py  gallery_view.py  left_navigation_menu.py  not_data_table.py
data/: custom_fields.py  db.py  manage.py  migrate.py  models.py  serach.py
data/migrations/: 0001_initial.py  0002_remove_categoria_codigo_categoria_porcentaje_iva.py
modules/api/: routes.py  views.py
modules/comun/: models.py  views.py
modules/inventario/: models.py  serializers.py  views.py
modules/pos/: routes.py  uilities.py  views.py
modules/servidor/: models.py  routes.py  views.py
pages/: conditions.py  generic_header_detail_form.py  generic_page.py  generic_page_form_standar.py  generic_page_form_standard.py  home_page.py  not_found_page.py
router/: control.py  router.py
utilities/: style_keys.py  style_manager.py  template_routes.py  utilities.py
(+25 files in other folders)
