[project]
name = "supersanjavier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "fastapi>=0.115.12",
    "flet>=0.27.6",
    "pip>=25.0.1",
    "uvicorn>=0.34.1",
]
